--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "playwright test",
+    "test": "playwright test --config=src/playwright.config.ts",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
